[#542] clean up css and fixed jumpy bug with slide down animation

--- a/client/views/player/ed-song-card-view/ed-song-card-view.less
+++ b/client/views/player/ed-song-card-view/ed-song-card-view.less
@@ -3,37 +3,47 @@
 @import "../../../styles/mixins/prefixes/animations.less";
 @import "../../../styles/mixins/prefixes/transforms.less";
 
-.song-card-wrapper {
+.overflow-wrapper {
+  overflow: hidden;
+  min-height: 100%;
+}
+
+#song-card-wrapper {
   background: @darkPurple3;
   width: 100%;
+  min-height: 100%;
   max-width: 59.6rem;
-  overflow: hidden;
+  //overflow-y: hidden;
+
+  &.show-main {
+    .animation( slidePlayerUp .8s forwards );
+  }
+
+  &.hide-main {
+    .animation( slidePlayerDown .8s forwards );
+  }
 }
 
 #mini-player-wrapper {
   position: fixed;
   bottom: 100%;
 
-  &.active {
-    .animation( slideMiniPlayerDown .8s forwards );
+  &.show-mini {
+    //.animation( slideMiniPlayerDown 0s .8s forwards );
     z-index: 2;
+    bottom: 0;
+    transition: bottom 0s .8s;
+    //visibility: visible;
   }
 
-  &.hidden {
-    .animation( slideMiniPlayerUp .8s forwards );
+  &.hide-mini {
+    .animation( slideMiniPlayerUp 0s .8s forwards );
+    //visibility: hidden;
   }
 }
 
 #main-player-wrapper {
-  overflow: hidden;
-
-  &.active {
-    .animation( slidePlayerUp .8s forwards );
-  }
-
-  &.hidden {
-    .animation( slidePlayerDown .8s forwards );
-  }
+  .transform( translate3d( 0, 0, 0 ));
 }
 
 #user-ranking {
@@ -41,22 +51,29 @@
 }
 
 #minify-button {
-  width: 20%;
-  height: 8vh;
+  width: 15%;
+  height: 15vh;
   background: transparent;
   border: none;
-  #minify-icon {
-    fill: @lightGrey1;
-    height: 60%;
-    width: 60%;
+}
+
+#minify-icon {
+  fill: @lightGrey1;
+  height: 60%;
+  width: 80%;
+}
+
+#songs-rated {
+  .user-rank {
+    margin-right: 1rem;
   }
 }
 
 #brief-bio {
   background: @originalWhite;
   .responsive-box {
-    padding: 1%;
-    margin-left: 4%;
+    //padding: 1%;
+    //margin-left: 4%;
     position: relative;
     width: 100%;
     background: @originalWhite;
@@ -116,20 +133,20 @@
 
 .keyframes( slidePlayerDown, {
   0% {
-    .transform( translateY( 0% ));
+    .transform( translate3d( 0, 0, 0 ));
   }
   100% {
-    .transform( translateY( 100% ));
+    .transform( translate3d( 0, 100%, 0 ));
   }
 });
 
 
 .keyframes( slidePlayerUp, {
   0% {
-    .transform( translateY( 100% ));
+    .transform( translate3d( 0, 100%, 0 ));
   }
   100% {
-    .transform( translateY( 0% ));
+    .transform( translate3d( 0, 0, 0 ));
   }
 });
 
@@ -146,11 +163,17 @@
 
 .keyframes( slideMiniPlayerUp, {
 0% {
-  //.transform( translateY( 0% ));
-  bottom: 0%;
+  //.transform( translateY( 88% ));
+  bottom: 0;
 }
 100% {
-  //.transform( translateY( 88% ));
+  //.transform( translateY( 0% ));
   bottom: 100%;
+}
+});
+
+.keyframes( fixedMiniPlayer, {
+to {
+  bottom: 0;
 }
 });
